# opal-studio

./: .gitignore  InferenceInstanseg.py  LICENSE  MANIFEST.in  README.md  Train.ipynb  dl_models.py  environment.yml  help3.txt  pyproject.toml  read_spatial_data.py  requirements.txt  setup.py  test_instanseg.py  test_instanseg2.py  test_instanseg3.py  test_instanseg4.py  test_loader.py  test_zarr.py
.claude/: settings.json
opal_studio/: __init__.py  __main__.py  channel_model.py  clustering.py  dimensionality_reduction.py  image_loader.py  image_renderer.py  main_window.py  project_io.py  remove_hotpixels.py  segmentation_engine.py  uber.py
opal_studio-0.1.3/: MANIFEST.in  PKG-INFO  pyproject.toml
opal_studio-0.1.3/opal_studio/: __init__.py  __main__.py  channel_model.py  dimensionality_reduction.py  image_loader.py  image_renderer.py  main_window.py  segmentation_engine.py  uber.py  watershed.py
opal_studio-0.1.3/opal_studio/widgets/: __init__.py  channel_panel.py  operations_panel.py
opal_studio/widgets/: brightfield_view.py  channel_panel.py  clustering_heatmap_tab.py  geometry.py  image_canvas.py  operations_panel.py  phenotyping_tab.py  range_slider.py  scatter_plot_tab.py
scratch/: check_instanseg_models.py  test_contours.py  test_cv2_contours.py  test_medfilt.py  test_medfilt_range.py  verify_contours.py  verify_vector_contours.py
tests/: test_count_cells_in_regions.py  test_spatialdata_loader.py
