[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "opal-studio"
version = "0.1.0"
description = "Cross-platform IMC and H&E OME-TIFF image viewer"
authors = [
    {name = "Tristan"}
]
license = {text = "MIT + Commons Clause"}
requires-python = ">=3.9"
dependencies = [
    "PySide6>=6.5.0",
    "tifffile",
    "imagecodecs",
    "numpy<2.0.0",
    "scikit-image",
    "pandas",
    "tensorflow==2.8.0",
    "torch>=2.0.0",
    "deepcell",
    "stardist",
    "cellpose",
    "instanseg-torch",
]

[project.scripts]
opal-studio = "opal_studio.__main__:main"

[tool.setuptools.packages.find]
include = ["opal_studio*"]
