[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "opal-studio"
version = "0.1.3"
description = "Cross-platform IMC and H&E OME-TIFF image viewer"
authors = [
    {name = "Tristan"}
]
license = {text = "MIT + Commons Clause"}
requires-python = ">=3.9"
dependencies = [
    "PySide6==6.4.3",
    "tifffile==2024.8.30",
    "imagecodecs==2024.12.30",
    "numpy==1.26.4",
    "scikit-image==0.21.0",
    "pandas==2.3.3",
    "tensorflow==2.8.0",
    "tensorflow-addons==0.16.1",
    "tensorflow-io-gcs-filesystem==0.26.0",
    "protobuf==3.20.3",
    "spektral==1.0.6",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "einops==0.8.2",
    "deepcell==0.12.10",
    "deepcell-toolbox==0.12.1",
    "deepcell-tracking==0.6.5",
    "stardist==0.9.2",
    "csbdeep==0.8.2",
    "cellpose==3.1.1.3",
    "omnipose==1.0.6",
    "instanseg-torch==0.1.1",
    "torchvf==0.1.4",
    "scipy==1.13.1",
    "scikit-learn==1.6.1",
    "matplotlib==3.9.4",
    "pillow==11.3.0",
    "h5py==3.14.0",
    "opencv-python-headless==4.11.0.86",
    "tqdm==4.67.3",
    "natsort==8.4.0",
    "psutil==7.2.2",
    "zarr==2.18.2",
    "geopandas==1.0.1",
    "shapely==2.0.7",
    "pyarrow==21.0.0",
    "seaborn==0.13.2",
    "peakdetect==1.2",
    "mahotas==1.4.18",
    "igraph==1.0.0",
    "roifile==2024.9.15",
    "fastremap==1.18.0",
    "fill-voids==2.1.1",
    "edt==3.1.1",
    "mgen==1.2.1",
    "ncolor==1.5.3",
    "pywin32==311; sys_platform == 'win32'",
    "setuptools>=68.0,<70.0.0",
]

[project.scripts]
opal-studio = "opal_studio.__main__:main"

[tool.setuptools.packages.find]
include = ["opal_studio*"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"opal_studio" = ["icons/*", "*.png", "*.ico"]

[tool.setuptools.exclude-package-data]
"opal_studio" = ["models/*", "models/**/*"]
