[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "opal-studio"
version = "0.1.4"
description = "Cross-platform IMC and H&E OME-TIFF image viewer"
authors = [
    {name = "Tristan"}
]
license = {text = "MIT + Commons Clause"}
requires-python = ">=3.9"
dependencies = [
    "PySide6==6.4.3",
    "tifffile==2024.8.30",
    "imagecodecs==2024.12.30",
    "numpy==1.26.4",
    "scikit-image==0.24.0",
    "pandas==2.3.3",
    "tensorflow==2.8.0",
    "tensorflow-addons==0.16.1",
    "tensorflow-io-gcs-filesystem==0.26.0",
    "protobuf==3.20.3",
    "spektral==1.0.6",
    "torch==2.1.2",
    "torchvision==0.16.2",
    "einops==0.8.2",
    "deepcell==0.12.10",
    "deepcell-toolbox==0.12.1",
    "deepcell-tracking==0.6.5",
    "stardist==0.9.2",
    "csbdeep==0.8.2",
    # Virtual brightfield generation (Brightfield tab). Base install only — the
    # optional 'enhance' extra pulls tensorflow==2.14, which conflicts with the
    # Mesmer/DeepCell TF 2.8 stack, so it is intentionally not requested here.
    "multiplex2brightfield>=0.2.8",
    "cellpose==3.1.1.3",
    "omnipose==1.0.6",
    "instanseg-torch==0.1.1",
    "torchvf==0.1.4",
    "scipy==1.13.1",
    "scikit-learn==1.6.1",
    # Clustering / phenotyping / cell-table stack (imported directly by
    # clustering.py, dimensionality_reduction.py, project_io.py, main_window.py)
    "anndata==0.10.9",
    "scanpy==1.10.3",
    "phenograph==1.5.7",
    "umap-learn==0.5.12",
    "leidenalg==0.10.2",    # backend for scanpy sc.tl.leiden
    "louvain==0.8.2",       # backend for scanpy sc.tl.louvain
    "matplotlib==3.9.4",
    "pillow==11.3.0",
    "h5py==3.14.0",
    "opencv-python-headless==4.11.0.86",
    "tqdm==4.67.3",
    "natsort==8.4.0",
    "psutil==7.2.2",
    "zarr==2.18.2",
    "numcodecs==0.12.1",    # zstd chunk codec used directly by image_loader / project_io
    "geopandas==1.0.1",
    "shapely==2.0.7",
    "pyarrow==21.0.0",
    "seaborn==0.13.2",
    "peakdetect==1.2",
    "mahotas==1.4.18",
    "igraph==0.11.9",
    "roifile==2024.9.15",
    "fastremap==1.18.0",
    "fill-voids==2.1.1",
    "edt==3.1.1",
    "mgen==1.2.1",
    "ncolor==1.5.3",
    "pywin32==311; sys_platform == 'win32'",
    "setuptools>=68.0,<70.0.0",
]

[project.scripts]
opal-studio = "opal_studio.__main__:main"

[tool.setuptools.packages.find]
include = ["opal_studio*"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"opal_studio" = ["icons/*", "*.png", "*.ico"]

[tool.setuptools.exclude-package-data]
# Model weights are NOT shipped in the wheel (they are ~600 MB and change
# rarely). Copy them into the installed package's models/ dir separately.
"opal_studio" = ["models/*", "models/**/*"]
